--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,9 @@
 {% block content %}
     <h1>Sign In</h1>
     <form action="" method="post">
+        <p>
+            New User? <a href="{{ url_for('register') }}">Click to Register!</a>
+        </p>
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
